Fix Vercel deployment: Create proper serverless function structure with api/index.js

--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,24 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "server.js",
-      "use": "@vercel/node"
+  "functions": {
+    "api/index.js": {
+      "runtime": "@vercel/node"
     }
-  ],
+  },
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/server.js"
+      "dest": "/api/index.js"
     },
     {
       "src": "/(.*)",
-      "dest": "/server.js"
+      "dest": "/api/index.js"
+    }
+  ],
+  "builds": [
+    {
+      "src": "public/**/*",
+      "use": "@vercel/static"
     }
   ]
 }
