Fix serverless deployment: Correct module imports and static file routing for Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -12,13 +12,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/api/index.js"
-    }
-  ],
-  "builds": [
-    {
-      "src": "public/**/*",
-      "use": "@vercel/static"
+      "dest": "/public/index.html"
     }
   ]
 }
